    o Feature #2159, added GrayChannel ChannelType enum value, BlendCompositeOp and
      ColorBurnCompositeOp CompositeOperator enum values, RLECompression CompressionType
      enum value, deprecate RunlengthCompression
    o Feature #2172, added optional argument to crop and crop! to reset the saved
      page offsets after cropping

RMagick 1.9.0
    o Added Image#monitor=, Image::Info#monitor=. Deprecated Magick.set_monitor.
    o Fixed bug #2070, support color names with embedded spaces
    o Fixed bug #2109, properly scope Magick constants in RVG

RMagick 1.8.3
    o Tested with ImageMagick 6.2.3-2
    o Added comment, delay, dispose, fill, gravity, and label attributes to
      Image::Info

RMagick 1.8.2
    o Fix bug #1983, potential buffer overflow in version_constants
    o Added feature #2015, support the pointsize, authenticate,
      and sampling_factor attributes in Image::Info

RMagick 1.8.1
    o Fix bugs #1876, #1888, #1919
    o Added feature #1941, RVG's polyline, polygon accept array arguments
    o Numerous fixes to the RVG documentation

RMagick 1.8.0
    o Added Image#shadow (ImageMagick 6.1.7)
    o Added Image::Info#undefine, #[], #[]=
    o Added sigmoidal_contrast_channel, sepiatone to Image class (ImageMagick 6.2.1)
    o Added JPEG2000Compression constant (ImageMagick 6.2.2)
    o Incorporated RVG classes
    o Added RVG documentation, examples, updated installer
    o Tested with ImageMagick 6.2.2-0, latest GraphicsMagick 1.2

RMagick 1.7.4
    o Fix bug #1727
    o Fix affine_transform.rb
    o Tested with ImageMagick 6.2.1

RMagick 1.7.3
    o Fix bug #1553, a build issue with ImageMagick 6.0.x

RMagick 1.7.2
    o Fix bugs #1308, #1310, #1314, #1533

RMagick 1.7.1
    o Fix bugs #1250, #1253
    o Tested with ImageMagick 6.1.7, Ruby 1.8.2

RMagick 1.7.0
    o Added splice, set_channel_depth to Image class (ImageMagick 6.0.0)
    o Added sharpen_channel, blur_channel to Image class (ImageMagick 6.0.1)