@@ -719,7 +719,7 @@ random_threshold_channel(geom, RedChannel)
 
     <p><a href=
     "image1.html#adaptive_threshold">adaptive_threshold</a>,
-    <a href="image1.html#channel_threshold">channel_threshold</a>,
+    <a href="image1.html#bilevel_channel">bilevel_channel</a>,
     <a href="#threshold">threshold</a></p>
 
     <h4>Magick API</h4>
@@ -2353,9 +2353,9 @@ p stats.red.stddev &raquo; 0.231399683489667
 
     <p><a href=
     "image1.html#adaptive_threshold">adaptive_threshold</a>,
-    <a href="image1.html#channel_threshold">channel_threshold</a>,
+    <a href="image1.html#bilevel_channel">bilevel_channel</a>,
     <a href=
-    "#random_channel_threshold">random_channel_threshold</a></p>
+    "image1.html#channel_random_threshold">channel_random_threshold</a></p>
 
     <h4>Magick API</h4>
 
@@ -2974,7 +2974,7 @@ end
 
     <p><a href="image1.html#black_threshold">black_threshold</a>,
     <a href=
-    "image1.html#channel_threshold">channel_threshold</a></p>
+    "image1.html#bilevel_channel">bilevel_channel</a></p>
 
     <h4>Magick API</h4>
 
