@@ -919,12 +919,6 @@ exit
 
       <dd>Blur the image</dd>
 
-      <dt><a href=
-      "image1.html#channel_threshold">channel_threshold</a></dt>
-
-      <dd>Change the value of individual pixels based on the
-      intensity of each pixel channel</dd>
-
       <dt><a href="image1.html#colorize">colorize</a></dt>
 
       <dd>Blend the fill color with each pixel in the image</dd>
